gl31-master/src/test/deca/syntax/valid/sansobjet/print_prog.deca
// Description:
//    tests de programme correct syntaxiquement pour sans-objet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 12/01/2021
{
    float aaaa = 7.2;
    print("aaaa = " + aaaa*0.5);
}
