gl31-master/src/test/deca/syntax/invalid/sansobjet/ifelse_condition.deca
// Description:
//    tests de programme incorrect syntaxiquement pour sans-objet
//
// Resultats:
//    Ligne 13 : Erreur, condition manquante
//
// Historique:
//    cree le 18/01/2021
{
    boolean b;

    if{
        print(b);
    }
    else if(b == false){
        print("yes");
    }
    else{
        print("no");
    }
}
